<resources>
    <string name="app_name">cashbook</string>
    <string name="button">Button</string>
    <string name="hint">input</string>
    <string name="graph">グラフ画面</string>
    <string name="tograph">グラフへ</string>
    <string name="tolist">リストへ</string>
    <string name="toinput">入力画面へ</string>
    <string name="tospeech">音声入力へ</string>
    <string name="item">品目</string>
    <string name="amount">金額</string>
    <string name="pay">支出</string>
    <string name="income">収入</string>
    <string name="balance">残高</string>
    <string name="chartLable">グラフ</string>
    <string name="label_date">日付：</string>
    <string name="label_item">品目：</string>
    <string name="label_amount">金額：</string>
    <string name="error">No Activity</string>
    <string name="text">音声認識</string>
    <string name="button_speech">Speech</string>
    <string name="button_set">登録</string>
    <string name="button_set_pay">支出</string>
    <string name="button_set_income">収入</string>
</resources>
