<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#dff"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_gotograph"
            android:text="@string/tograph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_gotolist"
            android:text="@string/tolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"/>

    </LinearLayout>

    <!-- 支出 -->
    <TextView
        android:id="@+id/text_view_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/edit_text_payitem"
        android:hint="@string/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_text_payamount"
        android:hint="@string/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_pay"
        android:text="@string/pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- 収入 -->
    <TextView
        android:id="@+id/text_view_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/edit_text_incomeitem"
        android:hint="@string/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_text_incomeamount"
        android:hint="@string/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_income"
        android:text="@string/income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- 残高 -->
    <TextView
        android:id="@+id/text_view_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:gravity="center" />

    <EditText
        android:id="@+id/edit_text_balance"
        android:hint="@string/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#ffffff"
        android:gravity="center"/>

    <Button
        android:id="@+id/button_balance"
        android:text="@string/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>
